Fixed the layout issue faced in netlify

--- a/style.css
+++ b/style.css
@@ -25,13 +25,14 @@ html,body{
 }
 
 html{
-    padding:var(--space-xl);
+    padding:0px;
     background-color: var(--bg-primary-color);
     color:var(--text-primary-color);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main{
+    padding:16px;
     border:1px solid var(--border-color);
     border-radius: var(--border-radius);
 }
@@ -69,7 +70,7 @@ section .infos{
     margin-bottom: -20px;
 }
 .info{
-    font-size: clamp(14px, 1.6vw, 24px);
+    font-size: clamp(13px, 1.2vw, 18px);
     padding: clamp(6px, 1vw, 14px) clamp(10px, 1.5vw, 22px);
     border-radius: clamp(8px, 1vw, 16px);
     font-weight: 600;
@@ -91,8 +92,8 @@ section .infos{
     display: grid;
     grid-template-columns: repeat(20, 1fr);
     grid-template-rows: repeat(20, 1fr);
-    width: min(800px, 80vmin);
-    height: min(800px, 80vmin);
+    width: min(520px, 90vmin);
+    height: min(520px, 90vmin);
     padding: 10px;
     background: #0b0f14;
     border-radius: 28px;
